Add black background and logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Dev & Drive</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Welcome to Dev & Drive</h1>
-  <p>Sharing Software, DevOps, Security & Leadership Insights.</p>
+  <div>
+    <img src="images/devanddrive_200px.png" alt="Dev & Drive Logo">
+  </div>
+  <div>
+      Sharing Software, Devops, Infrastructure, Security & Leadership Insights.
+  </div>
 </body>
 </html>
