--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="images/devanddrive_200px.png" alt="Dev & Drive Logo">
   </div>
   <div>
-      Sharing Software, Devops, Infrastructure, Security & Leadership Insights.
+      Software, Devops, Infrastructure, Security & Leadership Insights.
   </div>
 </body>
 </html>
