Update main index sentence

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="images/devanddrive_200px.png" alt="Dev & Drive Logo">
   </div>
   <div>
-      Software, Devops, Infrastructure, Security & Leadership Insights.
+      Strategic Leadership and Hands-on Technical Support in Software, DevOps, Infrastructure & Security.
   </div>
 </body>
 </html>
